Fix: grid image stretch

--- a/src/OxPollen/Styles/Components/_GrainGrid.scss
+++ b/src/OxPollen/Styles/Components/_GrainGrid.scss
@@ -24,6 +24,11 @@
             right: 2px;
             background: lightgrey;
 
+            .img-container {
+                height:100%;
+                width:100%;
+            }
+
             .Latitude {
                 display: none;
             }
